# rust-Ollama-itert-lm-

./: .gitignore  Cargo.toml  README.md  build.rs  build_cpp_library.sh  soul.txt  tools.json
cli/: Cargo.toml
cli/src/: main.rs
litert-lm/: .cargo_vcs_info.json  Cargo.toml
litert-lm/examples/: openai_api_server.rs
litert-lm/src/: binary.rs  ffi.rs  lib.rs  main.rs  manager.rs  mcp.rs  native_engine.rs  process.rs  server.rs
litert-lm/tests/: dspy_integration_test.rs  openai_api_test.rs
src/: agentic.rs  ffi.rs  handlers.rs  main.rs  tools.rs  utils.rs
